--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                          <thead>
                                             <tr>
                                                <th scope="col" class="border border-bottom-0 mb-w">Type</th>
-                                               <th scope="col" class="border border-bottom-0 mb-w">Carpet Area</th>
+                                               <th scope="col" class="border border-bottom-0 mb-w">SBA (Sq.Ft.)</th>
                                                <th scope="col" class="border border-bottom-0 border-right-0">Price</th>
                                                <th scope="col"></th>
                                             </tr>
