--- a/index.html
+++ b/index.html
@@ -223,19 +223,19 @@
                                             
                                             <tr>
                                              <td class="border border-left-0 border-top-0 border-bottom-0 price-type" style="font-weight: bold;">3 BHK + 3T</td>
-                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">	2005 SqFt<small class="d-inline-block d-md-none">SBA (Sq.Ft.)</small></td>
+                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">	2005 SqFt<small class="d-inline-block d-md-none">(SBA (Sq.Ft.))</small></td>
                                              <td class="price-amt"><i class="mi mi-rs-light"></i>2.95Cr* Onwards</td>
                                                <td><button class="btn btn-sm btn-info effetGradient effectScale enqModal" data-form="lg" data-title="Send me costing details" onclick="pricePopProjectname('Send me 1200 costing details');" data-btn="Send now" data-enquiry="Request Price" data-redirect="floorplan" data-toggle="modal" data-target="#enqModal">Price Breakup</button></td>
                                             </tr>
                                             <tr>
                                                <td class="border border-left-0 border-top-0 border-bottom-0 price-type" style="font-weight: bold;">3 BHK + Maid's Room</td>
-                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">2187 - 2400 SqFt<small class="d-inline-block d-md-none">SBA (Sq.Ft.)</small></td>
+                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">2187 - 2400 SqFt<small class="d-inline-block d-md-none">(SBA (Sq.Ft.))</small></td>
                                             <td class="price-amt"><i class="mi mi-rs-light"></i> 3.25Cr* Onwards</td>
                                                <td><button class="btn btn-sm btn-info effetGradient effectScale enqModal" data-form="lg" data-title="Send me costing details" onclick="pricePopProjectname('Send me 1500 costing details');" data-btn="Send now" data-enquiry="Request Price" data-redirect="floorplan" data-toggle="modal" data-target="#enqModal">Price Breakup</button></td>
                                             </tr>
                                             <tr>
                                                <td class="border border-left-0 border-top-0 border-bottom-0 price-type" style="font-weight: bold;">3 BHK + Study Room + Maid's Room</td>
-                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">2451 - 2588 SqFt <small class="d-inline-block d-md-none">SBA (Sq.Ft.)</small></td>
+                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">2451 - 2588 SqFt <small class="d-inline-block d-md-none">(SBA (Sq.Ft.))</small></td>
                                                 <td class="price-amt"><i class="mi mi-rs-light"></i>3.65Cr* Onwards</td>
                                                <td><button class="btn btn-sm btn-info effetGradient effectScale enqModal" data-form="lg" data-title="Send me costing details" onclick="pricePopProjectname('Send me 2400 costing details');" data-btn="Send now" data-enquiry="Request Price" data-redirect="floorplan" data-toggle="modal" data-target="#enqModal">Price Breakup</button></td>
                                             </tr>
@@ -243,14 +243,14 @@
                                             
                                             <tr>
                                                <td class="border border-left-0 border-top-0 border-bottom-0 price-type" style="font-weight: bold;">4 BHK + Maid's Room</td>
-                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">2900 - 2956 SqFt<small class="d-inline-block d-md-none">SBA (Sq.Ft.)</small></td>
+                                               <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">2900 - 2956 SqFt<small class="d-inline-block d-md-none">(SBA (Sq.Ft.))</small></td>
                                                 <td class="price-amt"><i class="mi mi-rs-light"></i>4Cr* Onwards</td>
                                                <td><button class="btn btn-sm btn-info effetGradient effectScale enqModal" data-form="lg" data-title="Send me costing details" onclick="pricePopProjectname('Send me 2400 costing details');" data-btn="Send now" data-enquiry="Request Price" data-redirect="floorplan" data-toggle="modal" data-target="#enqModal">Price Breakup</button></td>
                                             </tr>
 
                                             <tr>
                                              <td class="border border-left-0 border-top-0 border-bottom-0 price-type" style="font-weight: bold;">5 BHK</td>
-                                             <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">3500 - 3700 SqFt<small class="d-inline-block d-md-none">SBA (Sq.Ft.)</small></td>
+                                             <td class="border border-left-0 border-top-0 border-bottom-0 price-carpet">3500 - 3700 SqFt<small class="d-inline-block d-md-none">(SBA (Sq.Ft.))</small></td>
                                               <td class="price-amt"><i class="mi mi-rs-light"></i>5Cr*Onwards</td>
                                              <td><button class="btn btn-sm btn-info effetGradient effectScale enqModal" data-form="lg" data-title="Send me costing details" onclick="pricePopProjectname('Send me 2400 costing details');" data-btn="Send now" data-enquiry="Request Price" data-redirect="floorplan" data-toggle="modal" data-target="#enqModal">Price Breakup</button></td>
                                           </tr>
