--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,65 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Privacy Policy</title>
-	<style>
-		body{
-			width: 95%;
-			margin: 20px auto;
-			max-width: 800px;
-			font-family: sans-serif;
-		}
-		p{
-			text-align: justify;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 20px;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        
+        <h2>Introduction</h2>
+        <p>Farheen Kousar ("Farheen Kousar" or "We"), a Real Estate Regulatory Authority (RERA) Registered Agent bearing RERA No: PRM/KA/RERA/1251/310/AG/220817/003060, prioritizes your privacy. This privacy policy outlines the personal information we collect through our website, including sub-domains and microsites, the purposes of collection, how we may share it, and the security measures in place. It also informs you about your rights, choices, and how to contact us regarding privacy concerns. We highly recommend reading this privacy policy before using our services and/or providing personal information.</p>
 
-<h3> Privacy Policy</h3>
+        <h2>Interpretations and Definitions</h2>
+        <ul>
+            <li><strong>Data</strong>: Personal information, including sensitive personal information and special category personal data (as defined under data protection laws) about you, which we collect, receive, or otherwise process in connection with your use of our website and/or platform.</li>
+            <li><strong>Data Protection Laws</strong>: Any applicable law for the time being in force relating to the processing of data.</li>
+            <li><strong>Service Providers</strong>: Entities that provide services to us and to whom we may disclose your data for a specific purpose pursuant to a written contract.</li>
+            <li><strong>Farheen Kousar/We</strong>: Farheen Kousar, and its subsidiaries, affiliates, and associate companies.</li>
+            <li><strong>User or You</strong>: The natural person who accesses our website/pages or platform.</li>
+        </ul>
 
-<p> This website is not the official one; it exists purely to provide information. We are dedicated to the security of 
-	your personal details, having established an extensive privacy policy to ensure your data is protected 
-	while you interact with our site.
-</p>
+        <h2>Website Content Overview</h2>
+        <p>The contents of this landing page, containing details of properties, property photos, costs, and availability, are provided for informational and illustrative purposes only. This information is subject to change at any time. Users are hereby advised that the actual properties may differ from what is shown in photos and costs on the website and pages, and as such, no claims shall be entertained based on such representations.</p>
 
-<h3>Privacy Policy Adjustments </h3>
+        <h2>Uses of Developer Information</h2>
+        <p>All images, cost descriptions, logos, and other project materials featured on this landing page are presented in accordance with the respective project developer or its licensors. We are in legal agreements and established legal relationships with the said respective developer, thereby possessing the authority to advertise, market for sale, and generate leads for the respective project.</p>
 
-<p>We reserve the right to amend or update our privacy policy at our discretion, without prior notice or 
-obtaining consent. We encourage our users to regularly review this policy to stay informed about any changes 
-that may affect how we handle personal information.
-</p>
+        <h2>Types of Data Collected</h2>
+        
+        <h3>Personal Data</h3>
+        <p>While visiting this website, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to:</p>
+        <ul>
+            <li>Email address</li>
+            <li>First name and last name</li>
+            <li>Phone number</li>
+            <li>Address, State, Province, ZIP/Postal Code, City</li>
+        </ul>
 
-<h3>Collection and Use of Information </h3>
+        <h2>How We Use Your Information</h2>
+        <p>We use the information we collect to:</p>
+        <ul>
+            <li>Provide and maintain our service, including monitoring the usage of our service.</li>
+            <li>Contact you by email, telephone calls, SMS, or other equivalent forms of electronic communication.</li>
+            <li>Provide information related to the property’s sale, purchase, etc., with special offers and general information about properties, real estate services which we offer that are similar to those that you have already purchased or enquired about.</li>
+            <li>Manage your requests and attend to your inquiries.</li>
+        </ul>
 
-<p>Your use of our website signifies your agreement with our terms and conditions, including our practices 
-concerning data collection and usage. Depending on the nature of your visit, we may not require personal 
-information for access. However, for certain services or areas of our website, submitting personal 
-information may be necessary. The information you provide is used to enhance your experience, including 
-sending updates, confirming communications, and offering relevant products or services. We are committed to 
-not sharing your personal data with third parties, and you have the freedom to opt-out of our communication 
-services at any time.
-</p>
+        <h2>Sharing Your Information</h2>
+        <p>We may share your information with:</p>
+        <ul>
+            <li><strong>Affiliates</strong>: We may share your information with our affiliates, in which case we will require those affiliates to honor this privacy policy. Affiliates include our associates and any other subsidiaries that we control or that are under common control with us.</li>
+            <li><strong>Authorized Developers</strong>: We may disclose your personal information with RERA-registered developers for further processing as necessary.</li>
+            <li><strong>With Your Consent</strong>: We may disclose your personal information for any other purpose with your consent.</li>
+        </ul>
 
-<h3>Data Security Measures</h3>
+        <h2>Retention of Your Personal Data</h2>
+        <p>We shall retain your personal data only for as long as is necessary for the purposes set out in this privacy policy. We will retain and use your personal data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws).</p>
 
-<p>We employ encryption to protect sensitive information transmitted online. Access to your personal data is 
-strictly limited to personnel who require it to perform their job functions and are bound by confidentiality 
-obligations. Additionally, we may utilize cookies to enhance security, maintain session integrity, and 
-personalize the user experience. Please be aware that rejecting cookies might restrict your access to specific
-services or features on our website.
-</p>
+        <h2>Disclosure of Your Personal Data</h2>
+        <h3>User's Consent</h3>
+        <p>By using the website/landing page and/or by providing information to us through this website/landing page, the user consents to the collection and use of the information disclosed by the user on the website in accordance with this privacy policy.</p>
 
-<h3>Inquiries and Feedback</h3>
+        <h3>Law Enforcement</h3>
+        <p>Under certain circumstances, we may be required to disclose your personal data if required to do so by law or in response to valid requests by public authorities (e.g., a court or a government agency).</p>
 
-<p>Should you have any questions or suggestions regarding our privacy policy or your interactions with our 
-website, we welcome you to reach out to us.
-</p>
+        <h3>Other Legal Requirements</h3>
+        <p>The company may disclose your personal data in the good faith belief that such action is necessary to:</p>
+        <ul>
+            <li>Comply with a legal obligation.</li>
+            <li>Prevent or investigate possible wrongdoing in connection with the service.</li>
+            <li>Protect the personal safety of users of the service or the public.</li>
+            <li>Protect against legal liability.</li>
+        </ul>
 
-<p> Our website functions as an auxiliary channel for educational purposes and is not an official source.   
-</p>
+        <h2>Security of Your Personal Data</h2>
+        <p>The security of your personal data is important to us, but remember that no method of transmission over the internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your personal data, we cannot guarantee its absolute security.</p>
 
+        <h2>Children's Privacy</h2>
+        <p>Our service does not address anyone under the age of 18. We do not knowingly collect personally identifiable information from anyone under the age of 18. If you are a parent or guardian and you are aware that your child has provided us with personal data, please contact us. If we become aware that we have collected personal data from anyone under the age of 18 without verification of parental consent, we take steps to remove that information from our servers.</p>
+
+        <h2>Changes to This Privacy Policy</h2>
+        <p>We may update our privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on this page. You are advised to review this privacy policy periodically for any changes. Changes to this privacy policy are effective when they are posted on this page.</p>
+
+        <h2>Contact Us</h2>
+        <p>To request to review, update, or delete your personal information or to otherwise reach us, please submit a request by contacting us directly through the provided contact information on this website.</p>
+    </div>
 </body>
 </html>
