--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   gtag('config', 'AW-16595113966');
 </script>
 
+<script defer type="application/javascript" src="https://pulse.clickguard.com/s/accFMEsLsQlmK/astoMaZuHEsme"></script>
+
 </head>
     <body data-spy="scroll" data-target="#navbarNav">
         <div id="loader"><span class="loader-text">
